feature: criando a página de cadastro de filme

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,6 +5,18 @@
 @source '../**/*.blade.php';
 @source '../**/*.js';
 
+@layer utilities {
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
+
+    input {
+        -moz-appearance: textfield;
+    }
+}
+
 @theme {
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
