feature: adicionando o DaisyUI no projeto e criação do componente de modal de avaliação

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,6 +5,8 @@
 @source '../**/*.blade.php';
 @source '../**/*.js';
 
+@plugin "daisyui";
+
 @layer utilities {
     input::-webkit-outer-spin-button,
     input::-webkit-inner-spin-button {
